removal op pm-utils, hibernate on lid closed still ignored for some reason :(

--- a/files/logind.conf
+++ b/files/logind.conf
@@ -21,6 +21,6 @@ HandleLidSwitch=hibernate
 #PowerKeyIgnoreInhibited=yes
 #SuspendKeyIgnoreInhibited=yes
 #HibernateKeyIgnoreInhibited=yes
-#LidSwitchIgnoreInhibited=yes
+LidSwitchIgnoreInhibited=yes
 #IdleAction=ignore
 #IdleActionSec=30min
