--- a/files/logind.conf
+++ b/files/logind.conf
@@ -14,13 +14,15 @@
 #KillOnlyUsers=
 #KillExcludeUsers=root
 #InhibitDelayMaxSec=5
-HandlePowerKey=ignore
+HandlePowerKey=suspend
 HandleSuspendKey=suspend
-HandleHibernateKey=suspend
+HandleHibernateKey=hibernate
 HandleLidSwitch=hibernate
-#PowerKeyIgnoreInhibited=yes
-#SuspendKeyIgnoreInhibited=yes
-#HibernateKeyIgnoreInhibited=yes
-LidSwitchIgnoreInhibited=yes
+PowerKeyIgnoreInhibited=no
+SuspendKeyIgnoreInhibited=no
+HibernateKeyIgnoreInhibited=no
+LidSwitchIgnoreInhibited=no
 #IdleAction=ignore
 #IdleActionSec=30min
+#RuntimeDirectorySize=10%
+#RemoveIPC=yes
