--- a/files/slim.conf
+++ b/files/slim.conf
@@ -18,7 +18,7 @@ authfile           /var/run/slim.auth
 
 
 # Activate numlock when slim starts. Valid values: on|off
-numlock             on
+# numlock             on
 
 # Hide the mouse cursor (note: does not work with some WMs).
 # Valid values: true|false
@@ -50,6 +50,7 @@ login_cmd           exec /bin/bash -login ~/.xinitrc %session
 # Set directory that contains the xsessions.
 # slim reads xsesion from this directory, and be able to select.
 sessiondir            /usr/share/xsessions/
+sessions awesome,gnome
 
 # Executed when pressing F11 (requires imagemagick)
 screenshot_cmd      import -window root /slim.png
@@ -79,7 +80,7 @@ focus_password      yes
 
 # current theme, use comma separated list to specify a set to 
 # randomly choose from
-current_theme       default
+current_theme       lake,isolated
 
 # Lock file
 lockfile            /var/lock/slim.lock
