new laptop issue with battery script

--- a/files/logind.conf
+++ b/files/logind.conf
@@ -14,14 +14,14 @@
 #KillOnlyUsers=
 #KillExcludeUsers=root
 #InhibitDelayMaxSec=5
-HandlePowerKey=suspend
-HandleSuspendKey=suspend
-HandleHibernateKey=hibernate
-HandleLidSwitch=hibernate
-PowerKeyIgnoreInhibited=no
-SuspendKeyIgnoreInhibited=no
-HibernateKeyIgnoreInhibited=no
-LidSwitchIgnoreInhibited=no
+#HandlePowerKey=poweroff
+#HandleSuspendKey=suspend
+#HandleHibernateKey=hibernate
+#HandleLidSwitch=suspend
+#PowerKeyIgnoreInhibited=no
+#SuspendKeyIgnoreInhibited=no
+#HibernateKeyIgnoreInhibited=no
+#LidSwitchIgnoreInhibited=yes
 #IdleAction=ignore
 #IdleActionSec=30min
 #RuntimeDirectorySize=10%
