--- a/files/slim.conf
+++ b/files/slim.conf
@@ -80,7 +80,7 @@ focus_password      yes
 
 # current theme, use comma separated list to specify a set to 
 # randomly choose from
-current_theme       lake,isolated
+current_theme       arch-tetra
 
 # Lock file
 lockfile            /var/lock/slim.lock
