--- a/files/.xbindkeysrc
+++ b/files/.xbindkeysrc
@@ -16,3 +16,9 @@
 
 "playerctl previous"
   Mod2 + XF86AudioPrev
+
+"xbacklight -inc 5 -time 0 -steps 1"
+  Mod2 + XF86MonBrightnessUp
+
+"xbacklight -dec 5 -time 0 -steps 1"
+  Mod2 + XF86MonBrightnessDown
