--- a/files/.xbindkeysrc
+++ b/files/.xbindkeysrc
@@ -1,4 +1,4 @@
-#Volume
+#Laptop
 "amixer -c 1 set Master 5+"
   Mod2 + XF86AudioRaiseVolume
 
@@ -22,3 +22,4 @@
 
 "xbacklight -dec 5 -time 0 -steps 1"
   Mod2 + XF86MonBrightnessDown
+
