--- a/files/.rtorrent.rc
+++ b/files/.rtorrent.rc
@@ -1,7 +1,7 @@
 download_rate = 500
 upload_rate = 100
 
-directory = /mnt/data/done/
+directory = /mnt/hd/done/
 session = /home/drew/.session/
 
 schedule = low_diskspace,5,60,close_low_diskspace=100M
