--- a/files/.screenrc
+++ b/files/.screenrc
@@ -1,13 +1,7 @@
-#color
-term screen-256color
-
 #status line
 hardstatus off
 hardstatus alwayslastline '%{= G}[ %{G}%H %{g}][%= %{= w}%?%-Lw%?%{= R}%n*%f %t%?%{= R}(%u)%?%{= w}%+Lw%?%= %{= g}][%{B}%Y-%m-%d %{W}%c:%s %{g}]'
 # hardstatus alwayslastline '%{= G}[ %{G}%H %{g}][%= %{= w}%?%-Lw%?%{= R}%n*%f %t%?%{= R}(%u)%?%{= w}%+Lw%?%= %{= g}][ %{y}Load: %l %{g}][%{B}%Y-%m-%d %{W}%c:%s %{g}]'
-
-#startupmsg
+#
+##startupmsg
 startup_message off
-
-#scroll
-termcapinfo xterm* ti@:te@
